<resources>
    <string name="app_name">Kanonmoon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="strbutton">This is String</string>
    <string name="Itemred">Itemred</string>
    <string name="Itemgreen">Itemgreen</string>
    <string name="Itemyellow">Itemyellow</string>
    <string name="Itemjump">Itemjump</string>
    <string name="PREF_FILE">APP_PREF_FILE</string>
    <string name="FONT_SIZE">APP_FONT_SIZE</string>
    <string name="FONT_COLOR">APP_FONT_COLOR</string>
    <string name="TEXT_INFO">APP_TEXT_INFO</string>

    <string name="changelanguage1">Welcome</string>
    <string name="changelanguage2">Hello</string>
    <string name="changelanguage3">Bye</string>

    <string-array name="arraytest01">
        <item>Element1</item>
        <item>Element2</item>
        <item>Element3</item>
        <item>Element4</item>
        <item>Element5</item>
    </string-array>

    <string-array name="qq1">
        <item>question1</item>
        <item>question2</item>
        <item>question3</item>
    </string-array>

    <string-array name="qq2">
        <item>answer1</item>
        <item>answer2</item>
        <item>answer3</item>
    </string-array>

    <string-array name="country_names">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--For RecyclerView-->
    <string-array name="recyclerviewlist1">
        <item>India</item>
        <item>Australia</item>
        <item>UAE</item>
        <item>Thailand</item>
        <item>Bri Lanka</item>
        <item>NetherLands</item>
        <item>New Zealand</item>
        <item>Malaysia</item>
    </string-array>

    <string-array name="recyclerviewlist2">
        <item>New Delhi</item>
        <item>Canberra</item>
        <item>Abu Dhabi</item>
        <item>Bangkok</item>
        <item>Jayawardenapura</item>
        <item>Amsterdam</item>
        <item>Wellington</item>
        <item>Kuala Lumpur</item>
    </string-array>







</resources>
