<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/changelanguage1"
            android:id="@+id/language1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="53dp" />

        <EditText
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:id="@+id/language2"
            android:layout_below="@+id/language1"
            android:layout_alignRight="@+id/language1"
            android:layout_alignEnd="@+id/language1"
            android:hint="@string/changelanguage2"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changelanguage3"
            android:id="@+id/language3"
            android:layout_alignTop="@+id/language2"
            android:layout_toRightOf="@+id/language1"
            android:layout_toEndOf="@+id/language1"
            android:textAllCaps="false"
            />

    </RelativeLayout>
</LinearLayout>